Fix : active filter alignment

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-grid-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-grid-rtl.css
@@ -4608,6 +4608,8 @@ button.pswp__button--zoom:hover {
 #secondary .widget_layered_nav_filters ul li.chosen a::before {
   margin-left: .5em;
   line-height: inherit;
+  position: relative;
+  top: 1px;
 }
 
 .woocommerce-terms-and-conditions {
