--- a/assets/css/unminified/compatibility/woocommerce/woocommerce.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce.css
@@ -4663,6 +4663,8 @@ button.pswp__button--zoom:hover {
 #secondary .widget_layered_nav_filters ul li.chosen a::before {
   margin-right: .5em;
   line-height: inherit;
+  position: relative;
+  top: 1px;
 }
 
 .woocommerce-terms-and-conditions {
