--- a/sass/site/compatibility/woocommerce/woocommerce-grid.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-grid.scss
@@ -3921,6 +3921,8 @@ button.pswp__button--zoom:hover {
 		&::before {
 			margin-right: .5em;
 			line-height: inherit;
+			position: relative;
+			top: 1px;
 		}
 	}
 }
